feat: Phase 1 & 2 complete - CRUD, filtering, search and statistics APIs
- Company & JobApplication CRUD with pagination and sorting
- OneToMany relationship mapping
- Status & date range filtering
- Company name search with pagination
- Count by status and statistics summary API
- Global exception handling with structured error responses
- DTO-based architecture with ModelMapper